Add fonts, change background

--- a/index.html
+++ b/index.html
@@ -52,13 +52,64 @@
 </header>
 
 <main>
-    <section></section>
+    <section>
+        <img src="/src/static/section_1.png" width="690" alt="decentralized music streaming protocol">
+        <p>
+            The music industry generates $43 billion in revenues, but only 12% of that amount is the share of
+            the artists generating content. Furthermore, artists have minimal control over how their music is
+            distributed and little visibility into who is streaming it. To address these and other problems
+            faced by artists, we are introducing JUU, a fully decentralized music streaming protocol built
+            on the basis of a public blockchain infrastructure with the application of various decentralized technologies
+        </p>
+    </section>
 
     <section></section>
 
-    <section></section>
+    <section>
+        <h2>Music Marketplace</h2>
+        <p>
+            Digital technology is revolutionizing the availability and consumption of music, but it is also posing
+            serious problems for distribution. Accessing, downloading and using music for free through YouTube and other
+            platforms is easy.
+        </p>
+        <p>
+            For subscription-based platforms, such as Spotify and Apple Music, the way artists are compensated
+            for the music they create has not changed significantly — meaning that even after service providers and
+            labels split their shares, some artists are still paid little. Furthermore, anyone can alter the music
+            available on said platforms with any decent software package, mislabel it, and upload it under a different account.
+        </p>
+        <p>
+            Over the past few years, blockchain has become widespread across all industries.
+            Thanks to blockchain technologies and tokenized artworks, independent music labels and artists are
+            reaping the benefits and regaining control of their money and artwork.
+        </p>
+        <p>
+            All eyes are on blockchain. The decentralization of the music industry can eliminate the elitism of
+            music production and distribution and put money back in the pockets of artists — its real owners.
+            NFTs are a development that could help revolutionize how indie artists are compensated and recognized.
+        </p>
+    </section>
 
-    <section></section>
+    <section>
+        <h2>RADIO STATION</h2>
+        <p>
+            The JUU app will be operating as a digital radio station with numerous performances from talents around
+            the globe, like DJ’s, musicians, performers and others. JUU will also host its own talk shows and interviews.
+            The talk shows will cover topics that are relevant to blockchain enthusiasts and musicians building their
+            careers in the digital space, touching on all points where music and blockchain overlap.
+            The service has no boundaries in terms of format and the team is ready to explore the possibilities of
+            music tokenization together with the community of creators and market experts.
+        </p>
+        <p>
+            Today, internet radio has the potential of becoming the most ubiquitous form of media ever,
+            attracting both young talents and brands to collaborate. Cryptocurrencies have always faced the
+            challenge of attracting new users. Although the apps are incredibly innovative, the user experience
+            leaves much to be desired. Radio creates an emotional response among its listeners and provides increased
+            trust and brand awareness in return. It is a good opportunity to introduce music content creators to
+            the world of blockchain technology through subcultural events and help them understand all the benefits
+            that will help build a career in the digital space. 
+        </p>
+    </section>
 
     <section></section>
 
