--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
         </div>
     </section>
 -->
-    <section class="section4">
-        <img src="/src/static/section4_bg.png">
-        <div>
+    <section class="section4 ">
+        <img src="/src/static/section4_bg.png" alt="radio station">
+        <div class="__fade">
             <h2><span>radio</span> station</h2>
             <p>
                 The JUU app will be operating as a digital radio station with numerous performances from talents around
@@ -116,9 +116,9 @@
         </div>
     </section>
 
-    <section class="section5">
-        <img src="/src/static/section5_bg.png">
-        <div>
+    <section class="section5 __fade">
+        <img src="/src/static/section5_bg.png" alt="blockchain ticket sales">
+        <div class="__fade">
             <h2><span>blockchain</span> ticket sales</h2>
 
             <p>
@@ -145,6 +145,67 @@
                 NFT-based tickets act as programmable money, providing unlimited potential for new revenue opportunities.
             </p>
         </div>
+    </section>
+
+    <section class="section6 __fade">
+        <div>
+            <div class="row">
+                <div class="item">
+                    <h3>Vladimir Henri  <span>CEO</span></h3>
+                    <p>
+                        Fusing his successful careers in both the music industry and London City finance, Vladimir worked with
+                        major worldwide players, including Boiler Room, NTS, Rinse, Adidas and Universal Music.
+                        Most recently, he made a breakthrough into the NFT
+                        market with several products poised to change the music industry forever.
+                    </p>
+                </div>
+
+                <div class="item">
+                    <h3>Alexey Makarenko  <span>CMO</span></h3>
+                    <p>
+                        Alex started his career in media and arts, worked in Ukraine’s top advertising
+                        agencies, founded the country’s first electronic music magazine as well as a leading music media outlet — Katacult.
+                        Today he is curating cultural projects & preparing the launch of an online radio station based in Kyiv.
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="item">
+                    <h3>Anton Pcholkin  <span>head of design</span></h3>
+                    <p>
+                        Graphic designer, founder and art-director of Detour Bureau. He worked with Ukraine’s top media outlets,
+                        including Bird in Flight, The Village Ukraine, Katacult & Babel. Anton has also developed the entire
+                        visual identity of the Kyiv International Short Film Festival in 2020 and 2021
+                    </p>
+                </div>
+
+                <div class="item">
+                    <h3>Anton Skrypii  <span>CTO</span></h3>
+                    <p>
+                        Anton is a life-long programming enthusiast with an industry experience of over 15 years,
+                        a Master of Computer Science and a versatile professional. He worked with huge corporations and start-ups,
+                        including LenovoUa, PiBox, ConcertUa, Best Wallet & Katacult.
+                    </p>
+                </div>
+
+            </div>
+            <div class="row">
+                <div class="item">
+                    <h3>Vladimir Nikitin  <span>Advisor</span></h3>
+                    <p>
+                        Vladimir is an experienced CEO, a serial entrepreneur, legal and financial specialist
+                        as well as a crypto/blockchain influencer with a big following. He worked for ICObench, was a CEO of
+                        Spaceswap.app and is currently a Venture Partner and Shima Capital as well as a co-founder of Liquify.io
+                    </p>
+                </div>
+
+                <div class="item __button">
+                    <button>chat with us</button>
+                </div>
+            </div>
+        </div>
+
+        <img src="src/static/team.png" alt="juu team">
     </section>
 
 </main>
