--- a/index.html
+++ b/index.html
@@ -62,9 +62,64 @@
             on the basis of a public blockchain infrastructure with the application of various decentralized technologies
         </p>
     </section>
-<!--
-    <section class="section3">
 
+    <section class="section2">
+        <div>
+            <div class="row">
+                <div class="item">
+                    <img class="margin-bottom" src="src/static/box.png">
+                    <p>
+                        JUU is a platform that stands for artists and not management companies
+                    </p>
+                </div>
+
+                <div class="item">
+                    <img class="margin-bottom" src="src/static/box.png">
+                    <p>
+                        JUU is an open source NFT aggregator that will attract other platform like Rarible, Open Sea and others
+                    </p>
+                </div>
+
+                <div class="item">
+                    <img class="margin-bottom" src="src/static/box.png">
+                    <p>
+                        JUU operates as a radio stream platform for users globally
+                    </p>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="logo">
+                    <img src="/src/static/logo.png" alt="juu.live">
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="item">
+                    <p>
+                        JUU is a semi-commercial platform that will be acting as a quasi-agency and full-cycle music platform
+                    </p>
+                    <img class="margin-top" src="src/static/box.png">
+                </div>
+
+                <div class="item">
+                    <p>
+                        JUU is an audio-only NFT
+                    </p>
+                    <img class="margin-top" src="src/static/box.png">
+                </div>
+
+                <div class="item">
+                    <p>
+                        JUU is a ticketing service, which can work with traditional ticketing systems, or act as a ticket operator on its own
+                    </p>
+                    <img class="margin-top" src="src/static/box.png">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="section3">
 
         <div>
             <h2><span>Music</span> Marketplace</h2>
@@ -91,10 +146,10 @@
             </p>
         </div>
     </section>
--->
-    <section class="section4 ">
+
+    <section class="section4">
         <img src="/src/static/section4_bg.png" alt="radio station">
-        <div class="__fade">
+        <div class="">
             <h2><span>radio</span> station</h2>
             <p>
                 The JUU app will be operating as a digital radio station with numerous performances from talents around
@@ -116,9 +171,9 @@
         </div>
     </section>
 
-    <section class="section5 __fade">
+    <section class="section5">
         <img src="/src/static/section5_bg.png" alt="blockchain ticket sales">
-        <div class="__fade">
+        <div class="">
             <h2><span>blockchain</span> ticket sales</h2>
 
             <p>
@@ -147,7 +202,7 @@
         </div>
     </section>
 
-    <section class="section6 __fade">
+    <section class="section6">
         <div>
             <div class="row">
                 <div class="item">
