Add fadeIn animation

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </section>
 
     <section class="section2">
-        <div>
+        <div class="__fadeIn">
             <div class="row">
                 <div class="item">
                     <img class="margin-bottom" src="src/static/box.png">
@@ -148,7 +148,8 @@
     </section>
 
     <section class="section4">
-        <img src="/src/static/section4_bg.png" alt="radio station">
+        <img class="" src="/src/static/section4_bg.png" alt="radio station">
+
         <div class="">
             <h2><span>radio</span> station</h2>
             <p>
@@ -203,7 +204,7 @@
     </section>
 
     <section class="section6">
-        <div>
+        <div class="">
             <div class="row">
                 <div class="item">
                     <h3>Vladimir Henri  <span>CEO</span></h3>
