--- a/index.html
+++ b/index.html
@@ -119,9 +119,23 @@
         </div>
     </section>
 
-    <section class="section3">
+    <section class="section3 __fadeIn">
+        <div class="__vectors">
 
-        <div>
+            <img class="__vector_9" src="src/static/vectors/Vector.png"   style="left: 25px; top: 20px;">
+            <img class="__vector_8" src="src/static/vectors/Vector-1.png" style="left: 75px; top: 30px;">
+            <img class="__vector_7" src="src/static/vectors/Vector-2.png" style="left: 125px; top: 40px;">
+
+            <img class="__vector_6" src="src/static/vectors/Vector-3.png" style="left: 175px; top: 50px;">
+            <img class="__vector_5" src="src/static/vectors/Vector-4.png" style="left: 225px; top: 60px;">
+            <img class="__vector_4" src="src/static/vectors/Vector-5.png" style="left: 275px; top: 70px;">
+
+            <img class="__vector_3" src="src/static/vectors/Vector-6.png" style="left: 325px; top: 80px;">
+            <img class="__vector_2" src="src/static/vectors/Vector-7.png" style="left: 375px; top: 90px;">
+            <img class="__vector_1" src="src/static/vectors/Vector-8.png" style="left: 425px; top: 100px;">
+        </div>
+
+        <div class="">
             <h2><span>Music</span> Marketplace</h2>
             <p>
                 Digital technology is revolutionizing the availability and consumption of music, but it is also posing
@@ -147,7 +161,7 @@
         </div>
     </section>
 
-    <section class="section4">
+    <section class="section4 __fadeIn">
         <img class="" src="/src/static/section4_bg.png" alt="radio station">
 
         <div class="">
@@ -174,7 +188,8 @@
 
     <section class="section5">
         <img src="/src/static/section5_bg.png" alt="blockchain ticket sales">
-        <div class="">
+
+        <div class="__fadeIn">
             <h2><span>blockchain</span> ticket sales</h2>
 
             <p>
@@ -204,7 +219,7 @@
     </section>
 
     <section class="section6">
-        <div class="">
+        <div class="__fadeIn">
             <div class="row">
                 <div class="item">
                     <h3>Vladimir Henri  <span>CEO</span></h3>
