--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
 <header>
     <div class="logo">
-        <img src="/src/static/logo.png" alt="juu.live">
+        <img src="./src/static/logo.png" alt="juu.live">
     </div>
 
     <nav>
@@ -53,7 +53,7 @@
 
 <main>
     <section class="section1">
-        <img src="/src/static/section1_bg.png">
+        <img src="./src/static/section1_bg.png">
         <p>
             The music industry generates <strong>$43 billion</strong> in revenues, but only 12% of that amount is the share of
             the artists generating content. Furthermore, artists have minimal control over how their music is
@@ -67,21 +67,21 @@
         <div class="__fadeIn">
             <div class="row">
                 <div class="item">
-                    <img class="margin-bottom" src="src/static/box.png">
+                    <img class="margin-bottom" src="./src/static/box.png">
                     <p>
                         JUU is a platform that stands for artists and not management companies
                     </p>
                 </div>
 
                 <div class="item">
-                    <img class="margin-bottom" src="src/static/box.png">
+                    <img class="margin-bottom" src="./src/static/box.png">
                     <p>
                         JUU is an open source NFT aggregator that will attract other platform like Rarible, Open Sea and others
                     </p>
                 </div>
 
                 <div class="item">
-                    <img class="margin-bottom" src="src/static/box.png">
+                    <img class="margin-bottom" src="./src/static/box.png">
                     <p>
                         JUU operates as a radio stream platform for users globally
                     </p>
@@ -90,7 +90,7 @@
 
             <div class="row">
                 <div class="logo">
-                    <img src="/src/static/logo.png" alt="juu.live">
+                    <img src="./src/static/logo.png" alt="juu.live">
                 </div>
             </div>
 
@@ -99,21 +99,21 @@
                     <p>
                         JUU is a semi-commercial platform that will be acting as a quasi-agency and full-cycle music platform
                     </p>
-                    <img class="margin-top" src="src/static/box.png">
+                    <img class="margin-top" src="./src/static/box.png">
                 </div>
 
                 <div class="item">
                     <p>
                         JUU is an audio-only NFT
                     </p>
-                    <img class="margin-top" src="src/static/box.png">
+                    <img class="margin-top" src="./src/static/box.png">
                 </div>
 
                 <div class="item">
                     <p>
                         JUU is a ticketing service, which can work with traditional ticketing systems, or act as a ticket operator on its own
                     </p>
-                    <img class="margin-top" src="src/static/box.png">
+                    <img class="margin-top" src="./src/static/box.png">
                 </div>
             </div>
         </div>
@@ -121,17 +121,17 @@
 
     <section class="section3 __fadeIn">
         <div class="__vectors">
-            <img class="__vector_9" src="src/static/vectors/Vector.png"   style="left: 25px; top: 20px;">
-            <img class="__vector_8" src="src/static/vectors/Vector-1.png" style="left: 75px; top: 30px;">
-            <img class="__vector_7" src="src/static/vectors/Vector-2.png" style="left: 125px; top: 40px;">
+            <img class="__vector_9" src="./src/static/vectors/Vector.png"   style="left: 25px; top: 20px;">
+            <img class="__vector_8" src="./src/static/vectors/Vector-1.png" style="left: 75px; top: 30px;">
+            <img class="__vector_7" src="./src/static/vectors/Vector-2.png" style="left: 125px; top: 40px;">
 
-            <img class="__vector_6" src="src/static/vectors/Vector-3.png" style="left: 175px; top: 50px;">
-            <img class="__vector_5" src="src/static/vectors/Vector-4.png" style="left: 225px; top: 60px;">
-            <img class="__vector_4" src="src/static/vectors/Vector-5.png" style="left: 275px; top: 70px;">
+            <img class="__vector_6" src="./src/static/vectors/Vector-3.png" style="left: 175px; top: 50px;">
+            <img class="__vector_5" src="./src/static/vectors/Vector-4.png" style="left: 225px; top: 60px;">
+            <img class="__vector_4" src="./src/static/vectors/Vector-5.png" style="left: 275px; top: 70px;">
 
-            <img class="__vector_3" src="src/static/vectors/Vector-6.png" style="left: 325px; top: 80px;">
-            <img class="__vector_2" src="src/static/vectors/Vector-7.png" style="left: 375px; top: 90px;">
-            <img class="__vector_1" src="src/static/vectors/Vector-8.png" style="left: 425px; top: 100px;">
+            <img class="__vector_3" src="./src/static/vectors/Vector-6.png" style="left: 325px; top: 80px;">
+            <img class="__vector_2" src="./src/static/vectors/Vector-7.png" style="left: 375px; top: 90px;">
+            <img class="__vector_1" src="./src/static/vectors/Vector-8.png" style="left: 425px; top: 100px;">
         </div>
 
         <div class="">
@@ -161,7 +161,7 @@
     </section>
 
     <section class="section4 __fadeIn">
-        <img class="" src="/src/static/section4_bg.png" alt="radio station">
+        <img class="" src="./src/static/section4_bg.png" alt="radio station">
 
         <div class="">
             <h2><span>radio</span> station</h2>
@@ -186,7 +186,7 @@
     </section>
 
     <section class="section5">
-        <img src="/src/static/section5_bg.png" alt="blockchain ticket sales">
+        <img src="./src/static/section5_bg.png" alt="blockchain ticket sales">
 
         <div class="__fadeIn">
             <h2><span>blockchain</span> ticket sales</h2>
@@ -275,7 +275,7 @@
             </div>
         </div>
 
-        <img src="src/static/team.png" alt="juu team">
+        <img src="./src/static/team.png" alt="juu team">
     </section>
 
 </main>
