--- a/index.html
+++ b/index.html
@@ -120,20 +120,6 @@
     </section>
 
     <section class="section3 __fadeIn">
-        <div class="__vectors">
-            <img class="__vector_9" src="./src/static/vectors/Vector.png"   style="left: 25px; top: 20px;">
-            <img class="__vector_8" src="./src/static/vectors/Vector-1.png" style="left: 75px; top: 30px;">
-            <img class="__vector_7" src="./src/static/vectors/Vector-2.png" style="left: 125px; top: 40px;">
-
-            <img class="__vector_6" src="./src/static/vectors/Vector-3.png" style="left: 175px; top: 50px;">
-            <img class="__vector_5" src="./src/static/vectors/Vector-4.png" style="left: 225px; top: 60px;">
-            <img class="__vector_4" src="./src/static/vectors/Vector-5.png" style="left: 275px; top: 70px;">
-
-            <img class="__vector_3" src="./src/static/vectors/Vector-6.png" style="left: 325px; top: 80px;">
-            <img class="__vector_2" src="./src/static/vectors/Vector-7.png" style="left: 375px; top: 90px;">
-            <img class="__vector_1" src="./src/static/vectors/Vector-8.png" style="left: 425px; top: 100px;">
-        </div>
-
         <div class="">
             <h2><span>Music</span> Marketplace</h2>
             <p>
@@ -157,6 +143,20 @@
                 music production and distribution and put money back in the pockets of artists — its real owners.
                 NFTs are a development that could help revolutionize how indie artists are compensated and recognized.
             </p>
+        </div>
+
+        <div class="__vectors">
+            <img class="__vector_9" src="./src/static/vectors/Vector.png"   style="left: 25px; top: 20px;">
+            <img class="__vector_8" src="./src/static/vectors/Vector-1.png" style="left: 75px; top: 30px;">
+            <img class="__vector_7" src="./src/static/vectors/Vector-2.png" style="left: 125px; top: 40px;">
+
+            <img class="__vector_6" src="./src/static/vectors/Vector-3.png" style="left: 175px; top: 50px;">
+            <img class="__vector_5" src="./src/static/vectors/Vector-4.png" style="left: 225px; top: 60px;">
+            <img class="__vector_4" src="./src/static/vectors/Vector-5.png" style="left: 275px; top: 70px;">
+
+            <img class="__vector_3" src="./src/static/vectors/Vector-6.png" style="left: 325px; top: 80px;">
+            <img class="__vector_2" src="./src/static/vectors/Vector-7.png" style="left: 375px; top: 90px;">
+            <img class="__vector_1" src="./src/static/vectors/Vector-8.png" style="left: 425px; top: 100px;">
         </div>
     </section>
 
@@ -218,6 +218,10 @@
     </section>
 
     <section class="section6">
+        <div class="logo">
+            <img src="./src/static/logo.png" alt="juu.live">
+        </div>
+
         <div class="__fadeIn">
             <div class="row">
                 <div class="item">
@@ -275,7 +279,7 @@
             </div>
         </div>
 
-        <img src="./src/static/team.png" alt="juu team">
+        <img class="team-img" src="./src/static/team.png" alt="juu team">
     </section>
 
 </main>
