--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
         </p>
     </section>
 
-    <section class="section2">
-        <div class="__fadeIn">
+    <section class="section2 __fadeIn">
+        <div class="lg-size">
             <div class="row">
                 <div class="item">
                     <img class="margin-bottom" src="./src/static/box.png">
@@ -117,6 +117,55 @@
                 </div>
             </div>
         </div>
+        
+        <div class="sm-size">
+            <div class="row">
+                <div class="item">
+                    <p>
+                        JUU is a platform that stands for artists and not management companies
+                    </p>
+                    <img class="margin-bottom" src="./src/static/box.png">
+                </div>
+
+                <div class="item">
+                    <p>
+                        JUU is an open source NFT aggregator that will attract other platform like Rarible, Open Sea and others
+                    </p>
+
+                    <img class="margin-bottom" src="./src/static/box.png">
+                </div>
+
+                <div class="item">
+                    <p>
+                        JUU operates as a radio stream platform for users globally
+                    </p>
+
+                    <img class="margin-bottom" src="./src/static/box.png">
+                </div>
+            </div>
+            <div class="row">
+                <div class="item">
+                    <p>
+                        JUU is a semi-commercial platform that will be acting as a quasi-agency and full-cycle music platform
+                    </p>
+                    <img class="margin-bottom" src="./src/static/box.png">
+                </div>
+
+                <div class="item">
+                    <p>
+                        JUU is an audio-only NFT
+                    </p>
+                    <img class="margin-bottom" src="./src/static/box.png">
+                </div>
+
+                <div class="item">
+                    <p>
+                        JUU is a ticketing service, which can work with traditional ticketing systems, or act as a ticket operator on its own
+                    </p>
+                    <img class="margin-bottom" src="./src/static/box.png">
+                </div>
+            </div>
+        </div>
     </section>
 
     <section class="section3 __fadeIn">
@@ -146,17 +195,15 @@
         </div>
 
         <div class="__vectors">
-            <img class="__vector_9" src="./src/static/vectors/Vector.png"   style="left: 25px; top: 20px;">
-            <img class="__vector_8" src="./src/static/vectors/Vector-1.png" style="left: 75px; top: 30px;">
-            <img class="__vector_7" src="./src/static/vectors/Vector-2.png" style="left: 125px; top: 40px;">
-
-            <img class="__vector_6" src="./src/static/vectors/Vector-3.png" style="left: 175px; top: 50px;">
-            <img class="__vector_5" src="./src/static/vectors/Vector-4.png" style="left: 225px; top: 60px;">
-            <img class="__vector_4" src="./src/static/vectors/Vector-5.png" style="left: 275px; top: 70px;">
-
-            <img class="__vector_3" src="./src/static/vectors/Vector-6.png" style="left: 325px; top: 80px;">
-            <img class="__vector_2" src="./src/static/vectors/Vector-7.png" style="left: 375px; top: 90px;">
-            <img class="__vector_1" src="./src/static/vectors/Vector-8.png" style="left: 425px; top: 100px;">
+            <img class="__vector_9" src="./src/static/vectors/vector-1.png" style="left: 25px;  top: 20px;">
+            <img class="__vector_8" src="./src/static/vectors/vector-2.png" style="left: 75px;  top: 30px;">
+            <img class="__vector_7" src="./src/static/vectors/vector-3.png" style="left: 125px; top: 40px;">
+            <img class="__vector_6" src="./src/static/vectors/vector-4.png" style="left: 175px; top: 50px;">
+            <img class="__vector_5" src="./src/static/vectors/vector-5.png" style="left: 225px; top: 60px;">
+            <img class="__vector_4" src="./src/static/vectors/vector-6.png" style="left: 275px; top: 70px;">
+            <img class="__vector_3" src="./src/static/vectors/vector-7.png" style="left: 325px; top: 80px;">
+            <img class="__vector_2" src="./src/static/vectors/vector-8.png" style="left: 375px; top: 90px;">
+            <img class="__vector_1" src="./src/static/vectors/vector-9.png" style="left: 425px; top: 100px;">
         </div>
     </section>
 
