--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 <main>
     <section class="section1">
-        <img src="./src/static/section1_bg.png">
+        <img class="section1_img-effect1 section1_img-effect2" src="./src/static/section1_bg.png">
         <p>
             The music industry generates <strong>$43 billion</strong> in revenues, but only 12% of that amount is the share of
             the artists generating content. Furthermore, artists have minimal control over how their music is
