--- a/index.html
+++ b/index.html
@@ -38,34 +38,32 @@
 
 <header>
     <nav>
-        <a class="__active">about</a>
-        <a>music marketplace</a>
-        <a>radio station</a>
-        <a>blockchain ticket sales</a>
-        <a>team</a>
+        <a href="#section1">about</a>
+        <a href="#section3">music marketplace</a>
+        <a href="#section4">radio station</a>
+        <a href="#section5">blockchain ticket sales</a>
+        <a href="#section6">team</a>
     </nav>
 </header>
 
-<div class="header-buttons">
-    <div class="logo">
-        <img src="./src/static/logo.png" alt="juu.live">
+<div class="logo_header">
+    <img src="./src/static/logo.png" alt="juu.live">
 
-        <button id="btn_play">
-            <i class="fas fa-volume-mute"></i>
-        </button>
+    <button id="btn_play">
+        <i class="fas fa-volume-mute"></i>
+    </button>
 
-        <button id="btn_pause">
-            <i class="fas fa-volume-up"></i>
-        </button>
-    </div>
+    <button id="btn_pause">
+        <i class="fas fa-volume-up"></i>
+    </button>
+</div>
 
-    <div>
-        <a class="pdf_link">download pdf</a>
-    </div>
+<div>
+    <a class="pdf_link">download pdf</a>
 </div>
 
 <main>
-    <section class="section1">
+    <section id="section1">
         <img class="section1_img-effect1 section1_img-effect2" src="./src/static/section1_bg.png">
         <p>
             The music industry generates <strong>$43 billion</strong> in revenues, but only 12% of that amount is the share of
@@ -76,7 +74,7 @@
         </p>
     </section>
 
-    <section class="section2 __fadeIn">
+    <section id="section2" class="__fadeIn">
         <div class="lg-size">
             <div class="row">
                 <div class="item">
@@ -102,7 +100,7 @@
             </div>
 
             <div class="row">
-                <div class="logo">
+                <div class="logo_section2">
                     <img src="./src/static/logo.png" alt="juu.live">
                 </div>
             </div>
@@ -181,7 +179,7 @@
         </div>
     </section>
 
-    <section class="section3 __fadeIn">
+    <section id="section3" class="__fadeIn">
         <div class="">
             <h2><span>Music</span> Marketplace</h2>
             <p>
@@ -220,7 +218,7 @@
         </div>
     </section>
 
-    <section class="section4 __fadeIn">
+    <section id="section4" class="__fadeIn">
         <img class="" src="./src/static/section4_bg.png" alt="radio station">
 
         <div class="">
@@ -245,7 +243,7 @@
         </div>
     </section>
 
-    <section class="section5">
+    <section id="section5">
         <img src="./src/static/section5_bg.png" alt="blockchain ticket sales">
 
         <div class="__fadeIn">
@@ -277,7 +275,7 @@
         </div>
     </section>
 
-    <section class="section6 __fadeIn">
+    <section id="section6" class="__fadeIn">
         <div class="logo">
             <img src="./src/static/logo.png" alt="juu.live">
         </div>
@@ -346,11 +344,11 @@
 
 <footer>
     <nav>
-        <a class="__active">about</a>
-        <a>music marketplace</a>
-        <a>radio station</a>
-        <a>blockchain ticket sales</a>
-        <a>team</a>
+        <a href="#section1">about</a>
+        <a href="#section3">music marketplace</a>
+        <a href="#section4">radio station</a>
+        <a href="#section5">blockchain ticket sales</a>
+        <a href="#section6">team</a>
     </nav>
 </footer>
 
