--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
 
     <!-- Meta information -->
     <meta name="author" content="JUU">
-    <meta name="description" content="JUU">
-    <meta name="keywords" content="JUU">
+    <meta name="description" content="JUU is the first blockchain-based  platform that combines an online radio station, NFT marketplace only for music, and a ticket service">
+    <meta name="keywords" content="online radio, radio platform, ticket service, NFT, NFT marketplace, NFT aggregator,  blockchain, NFT ticket service, tokens, music NFT, events, streams, concerts, gigs, music sales, music idustry, talents, DJ, producer,  tokenization, crypto, content creators, musician, shows, event producers, events promotion, music lovers, eclecticism, broadcast, radio show, mixes, mixtapes, explore genres, electronic music, oriental, traditional, hip hop, rap, jazz, experimental, techno, house, electro, EBM, dark wave, new wave, ambient, dub, reggae, lovers rock, dubstep, krautrock, obscure, disco, rave, podcast, interview">
     <meta name="robots" content="index, follow">
 
     <!-- Social media (frontend only) -->
     <meta property="og:site_name" content="JUU"/>
     <meta property="og:title" content="JUU"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:image" content=""/>
-    <meta property="og:url" content=""/>
-    <meta property="og:description" content=""/>
+    <meta property="og:image" content="dist/static/logo.jpg"/>
+    <meta property="og:url" content="juu.live"/>
+    <meta property="og:description" content="JUU is the first blockchain-based platform that combines an online radio station, NFT marketplace only for music, and a ticket service"/>
     <meta property="og:locale" content="en_US">
 
     <!-- CSS includes -->
@@ -48,14 +48,8 @@
 
 <div class="logo_header">
     <img src="./src/static/logo.png" alt="juu.live">
-
-    <button id="btn_play">
-        <i class="fas fa-volume-mute"></i>
-    </button>
-
-    <button id="btn_pause">
-        <i class="fas fa-volume-up"></i>
-    </button>
+    <button id="btn_play"><i class="fas fa-volume-mute"></i></button>
+    <button id="btn_pause"><i class="fas fa-volume-up"></i></button>
 </div>
 
 <div>
