--- a/index.html
+++ b/index.html
@@ -296,12 +296,22 @@
                 </div>
             </div>
             <div class="row">
+                <!--
                 <div class="item">
                     <h3>Anton Pcholkin  <span>head of design</span></h3>
                     <p>
                         Graphic designer, founder and art-director of Detour Bureau. He worked with Ukraine’s top media outlets,
                         including Bird in Flight, The Village Ukraine, Katacult & Babel. Anton has also developed the entire
                         visual identity of the Kyiv International Short Film Festival in 2020 and 2021
+                    </p>
+                </div>
+                --->
+                <div class="item">
+                    <h3>Vladimir Nikitin  <span>Advisor</span></h3>
+                    <p>
+                        Vladimir is an experienced CEO, a serial entrepreneur, legal and financial specialist
+                        as well as a crypto/blockchain influencer with a big following. He worked for ICObench, was a CEO of
+                        Spaceswap.app and is currently a Venture Partner and Shima Capital as well as a co-founder of Liquify.io
                     </p>
                 </div>
 
@@ -315,23 +325,13 @@
                 </div>
 
             </div>
-            <div class="row">
-                <div class="item">
-                    <h3>Vladimir Nikitin  <span>Advisor</span></h3>
-                    <p>
-                        Vladimir is an experienced CEO, a serial entrepreneur, legal and financial specialist
-                        as well as a crypto/blockchain influencer with a big following. He worked for ICObench, was a CEO of
-                        Spaceswap.app and is currently a Venture Partner and Shima Capital as well as a co-founder of Liquify.io
-                    </p>
-                </div>
-
-                <div class="item __button">
-                    <button>chat with us</button>
-                </div>
+            <div class="__button">
+                <button>chat with us</button>
             </div>
         </div>
-
+        <!--
         <img class="team-img" src="./src/static/team.png" alt="juu team">
+        -->
     </section>
 
 </main>
