--- a/index.html
+++ b/index.html
@@ -53,12 +53,14 @@
 </div>
 
 <div>
-    <a class="pdf_link">download pdf</a>
+    <a class="pdf_link" href="./dist/static/juu_concept.pdf" download>download pdf</a>
 </div>
 
 <main>
     <section id="section1">
-        <img class="section1_img-effect1 section1_img-effect2" src="./src/static/section1_bg.png">
+        <img class="section1_img-effect1 section1_img-effect2"
+             src="./src/static/section1_bg.png"
+             alt="JUU is the first blockchain-based  platform that combines an online radio station, NFT marketplace only for music, and a ticket service">
         <p>
             The music industry generates <strong>$43 billion</strong> in revenues, but only 12% of that amount is the share of
             the artists generating content. Furthermore, artists have minimal control over how their music is
