Add animation effects

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 <main>
     <section id="section1">
-        <img class="section1_img-effect1 section1_img-effect2"
+        <img class="section1_img-effect"
              src="./src/static/section1_bg.png"
              alt="JUU is the first blockchain-based  platform that combines an online radio station, NFT marketplace only for music, and a ticket service">
         <p>
@@ -70,9 +70,9 @@
         </p>
     </section>
 
-    <section id="section2" class="__fadeIn">
+    <section id="section2" class="">
         <div class="lg-size">
-            <div class="row">
+            <div class="row __reveal">
                 <div class="item">
                     <img class="margin-bottom" src="./src/static/box.png">
                     <p>
@@ -95,13 +95,13 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row __fadeIn">
                 <div class="logo_section2">
                     <img src="./src/static/logo.png" alt="juu.live">
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row __reveal">
                 <div class="item">
                     <p>
                         JUU is a semi-commercial platform that will be acting as a quasi-agency and full-cycle music platform
@@ -126,7 +126,7 @@
         </div>
 
         <div class="sm-size">
-            <div class="row">
+            <div class="row __reveal ">
                 <div class="item">
                     <p>
                         JUU is a platform that stands for artists and not management companies
@@ -150,7 +150,7 @@
                     <img class="margin-bottom" src="./src/static/box.png">
                 </div>
             </div>
-            <div class="row">
+            <div class="row __reveal">
                 <div class="item">
                     <p>
                         JUU is a semi-commercial platform that will be acting as a quasi-agency and full-cycle music platform
@@ -175,8 +175,8 @@
         </div>
     </section>
 
-    <section id="section3" class="__fadeIn">
-        <div class="">
+    <section id="section3" class="">
+        <div class="__reveal">
             <h2><span>Music</span> Marketplace</h2>
             <p>
                 Digital technology is revolutionizing the availability and consumption of music, but it is also posing
@@ -201,7 +201,7 @@
             </p>
         </div>
 
-        <div class="__vectors">
+        <div class="__vectors __fadeIn">
             <img class="__vector_9" src="./src/static/vectors/vector-1.png" style="left: 25px;  top: 20px;">
             <img class="__vector_8" src="./src/static/vectors/vector-2.png" style="left: 75px;  top: 30px;">
             <img class="__vector_7" src="./src/static/vectors/vector-3.png" style="left: 125px; top: 40px;">
@@ -214,10 +214,8 @@
         </div>
     </section>
 
-    <section id="section4" class="__fadeIn">
-        <img class="" src="./src/static/section4_bg.png" alt="radio station">
-
-        <div class="">
+    <section id="section4" class="">
+        <div class="__reveal">
             <h2><span>radio</span> station</h2>
             <p>
                 The JUU app will be operating as a digital radio station with numerous performances from talents around
@@ -237,12 +235,18 @@
                 that will help build a career in the digital space. 
             </p>
         </div>
+
+        <img class="__fadeIn"
+             src="./src/static/section4_bg.png"
+             alt="JUU radio station">
     </section>
 
     <section id="section5">
-        <img src="./src/static/section5_bg.png" alt="blockchain ticket sales">
+        <img class="__fadeIn"
+             src="./src/static/section5_bg.png"
+             alt="Blockchain ticket sales">
 
-        <div class="__fadeIn">
+        <div class="__reveal">
             <h2><span>blockchain</span> ticket sales</h2>
 
             <p>
@@ -271,12 +275,12 @@
         </div>
     </section>
 
-    <section id="section6" class="__fadeIn">
-        <div class="logo">
+    <section id="section6" class="">
+        <div class="logo __fadeIn">
             <img src="./src/static/logo.png" alt="juu.live">
         </div>
 
-        <div>
+        <div class="__reveal">
             <div class="row">
                 <div class="item">
                     <h3>Vladimir Henri  <span>CEO</span></h3>
@@ -298,16 +302,6 @@
                 </div>
             </div>
             <div class="row">
-                <!--
-                <div class="item">
-                    <h3>Anton Pcholkin  <span>head of design</span></h3>
-                    <p>
-                        Graphic designer, founder and art-director of Detour Bureau. He worked with Ukraine’s top media outlets,
-                        including Bird in Flight, The Village Ukraine, Katacult & Babel. Anton has also developed the entire
-                        visual identity of the Kyiv International Short Film Festival in 2020 and 2021
-                    </p>
-                </div>
-                --->
                 <div class="item">
                     <h3>Vladimir Nikitin  <span>Advisor</span></h3>
                     <p>
@@ -327,13 +321,11 @@
                 </div>
 
             </div>
-            <div class="__button">
+
+            <div class="__button __fadeIn">
                 <button>chat with us</button>
             </div>
         </div>
-        <!--
-        <img class="team-img" src="./src/static/team.png" alt="juu team">
-        -->
     </section>
 
 </main>
